--- a/lesson7/Homework/index.html
+++ b/lesson7/Homework/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
       <img
         class="logo"
-        src="./images/TOLogo.png"
+        src="/images/TOLogo.png"
         alt="Logo strony Trenujemy Online"
       />
       <div class="main-container">
@@ -19,13 +19,13 @@
           <h2>Zarejestruj się jako trener</h2>
           <div class="social-container">
             <a href="#">
-              <img src="./images/fbIcon.png" alt="Ikona Facebook" />
+              <img src="/images/fbIcon.png" alt="Ikona Facebook" />
               <span>Rejestracja przez Facebook</span></a
             >
           </div>
           <div class="social-container">
             <a href=""
-              ><img src="./images/instaIcon.png" alt="Ikona Instragram" />
+              ><img src="/images/instaIcon.png" alt="Ikona Instragram" />
               <span>Rejestracja przez Instagram</span></a
             >
           </div>
