Homework 7 (login screen) complete

--- a/lesson7/Homework/index.html
+++ b/lesson7/Homework/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
       <img
         class="logo"
-        src="/images/TOLogo.png"
+        src="./images/TOLogo.png"
         alt="Logo strony Trenujemy Online"
       />
       <div class="main-container">
@@ -19,27 +19,43 @@
           <h2>Zarejestruj się jako trener</h2>
           <div class="social-container">
             <a href="#">
-              <img src="/images/fbIcon.png" alt="Ikona Facebook" />
-              <span>Rejestracja przez Facebook</span></a
+              <img src="./images/fbIcon.png" alt="Ikona Facebook" />Rejestracja
+              przez Facebook</a
             >
           </div>
           <div class="social-container">
             <a href=""
-              ><img src="/images/instaIcon.png" alt="Ikona Instragram" />
-              <span>Rejestracja przez Instagram</span></a
+              ><img
+                src="./images/instaIcon.png"
+                alt="Ikona Instragram"
+              />Rejestracja przez Instagram</a
             >
           </div>
-          <p class="divider">Lub za pomocą maila</p>
-          <form action="">
-            <input type="text" placeholder="First name..." />
-            <input type="text" placeholder="Last name..." />
+          <div class="divider">
+            <div class="divider-line"></div>
+            <p>Lub za pomocą maila</p>
+            <div class="divider-line"></div>
+          </div>
+          <div class="form-container">
+            <div class="row">
+              <input type="text" placeholder="First name..." />
+              <input type="text" placeholder="Last name..." />
+            </div>
             <input type="email" placeholder="Email address..." />
             <input type="password" placeholder="Password..." />
-            <input type="checkbox" />
-            <p>I have read the <a href="#">Terms & Conditions</a></p>
-            <button type="submit">Zarejestruj się za darmo</button>
-            <p>Masz już konto? <a href="#">Zaloguj się</a></p>
-          </form>
+
+            <div class="consent">
+              <input type="checkbox" /><span>
+                I have read the <a href="#">Terms & Conditions</a></span
+              >
+            </div>
+            <button class="register" type="submit">
+              Zarejestruj się za darmo
+            </button>
+            <div class="footer">
+              <span>Masz już konto? <a href="#">Zaloguj się</a></span>
+            </div>
+          </div>
         </div>
         <div class="right-container"></div>
       </div>
