--- a/lesson24/homework/project/index.html
+++ b/lesson24/homework/project/index.html
@@ -14,13 +14,14 @@
         Wszystkich dostępnych postaci jest <span id="characters-number"></span>
       </h3>
       <div class="nav">
-        <button id="prev">Poprzednia</button>
+        <button id="prev">Poprzednia</button
+        ><span class="arrow arrow-left"></span>
         <h4>
           Aktualna strona to <span id="actual-page"></span> na
           <span id="pages-number"></span>
         </h4>
-
-        <button id="next">Następna</button>
+        <button id="next">Następna</button
+        ><span class="arrow arrow-right"></span>
       </div>
       <div id="list"></div>
     </div>
